# screenshot-tool

./: .gitignore  Cargo.toml  install.sh  readme.md  uninstall.sh
src/: config.rs  dunstify_util.rs  grim_util.rs  main.rs  slurp_util.rs  time_utils.rs
