[package]
name = "shrust-shot"
version = "0.1.0"
edition = "2021"
description = "A fast, minimal screenshot tool for Wayland written in Rust."
license = "MIT"
repository = "https://github.com/aanthoonyy/shrust"
homepage = "https://github.com/aanthoonyy/shrust"
categories = ["command-line-utilities"]
keywords = ["screenshot", "wayland", "cli", "rust"]

[[bin]]
name = "shrust"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0.0"
chrono = "0.4.41"

